# eye

./: AUTHORS  COPYRIGHT  ChangeLog  HISTORY  INSTALL  Makefile  Makefile.am  Makefile.in  README  THANKS  aclocal.m4  acx_prog_cc_optim.m4  config.h  config.h.in  config.status  configure  configure.ac  configure.scan  eye-tpx.spec  eye-tpx.spec.in  eye.spec  eye.spec.in
autom4te.cache/: output.0  requests  traces.0
doc/: eye.ps  eye.tex
doc/ps/: cr1.ps  cr2.ps  eyeintro.ps  eyelayout.ps  input.ps  model.ps
man/: Makefile  Makefile.am  Makefile.in  eye.1  eye.1.in  eye.x
src/: Makefile  Makefile.am  Makefile.in  back.c  back.h  bpann.c  bpann.h  define.h  eye  field.c  field.h  globals.h  key.h  main.c  makeit.c  misc.c  misc.h  preflist.h  prefs.c  prefs.h  readimage.c  readimage.h  retina.c  retina.h  types.h
src/.deps/: back.Po  bpann.Po  coadd.Po  data.Po  field.Po  fitswcs.Po  header.Po  interpolate.Po  main.Po  makeit.Po  misc.Po  prefs.Po  readimage.Po  resample.Po  retina.Po  threads.Po  weight.Po
src/fits/: Makefile  Makefile.am  Makefile.in  fitsbody.c  fitscat.h  fitscat_defs.h  fitshead.c  fitswrite.c
src/fits/.deps/: fitsbody.Po  fitscat.Po  fitscheck.Po  fitscleanup.Po  fitshead.Po  fitskey.Po  fitsmisc.Po  fitsread.Po  fitstab.Po  fitsutil.Po  fitswrite.Po
